[package]
name = "pomodoro"
description = "A Simple Rust Pomodoro Timer"
authors = ["James Alexandre"]
version = "0.1.0"
edition = "2024"

[dependencies]
async-io = "2.5.0"
clap = { version = "4.5.41", features = ["derive"] }
color-eyre = "0.6.5"
crossterm = { version = "0.29.0", features = ["event-stream"] }
futures = "0.3.31"
futures-lite = "2.6.0"
mac-notification-sys = "0.6.6"
notify-rust = "4.11.7"
ratatui = "0.29.0"
tokio = { version = "1.47.0", features = ["full"] }
