[package]
name = "fokus"
description = "A Simple Pomodoro TUI Built With Rust"
repository = "https://github.com/itsonlyjames/pomodoro"
authors = ["James Alexandre"]
keywords = ["Pomodoro", "Timer", "TUI"]
version = "0.3.1"
edition = "2024"
license = "MIT"

[dependencies]
async-io = "2.5.0"
clap = { version = "4.5.41", features = ["derive"] }
color-eyre = "0.6.5"
crossterm = { version = "0.29.0", features = ["event-stream"] }
futures = "0.3.31"
futures-lite = "2.6.0"
notify-rust = "4.11.7"
ratatui = "0.29.0"
tokio = { version = "1.47.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
dirs = "5.0"
chrono = "0.4.41"

[dependencies.console-subscriber]
version = "0.2"
optional = true

[features]
default = []
debug = ["console-subscriber"]
